--- a/UI.MVC/UI.MVC.csproj
+++ b/UI.MVC/UI.MVC.csproj
@@ -120,7 +120,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_Data\Contatos.xml" />
+    <Content Include="App_Data\Contatos.xml">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
@@ -148,9 +150,10 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+    <Content Include="Views\Shared\_Delete.cshtml" />
+    <Content Include="Views\Shared\_New.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
