--- a/UI.MVC/UI.MVC.csproj
+++ b/UI.MVC/UI.MVC.csproj
@@ -159,7 +159,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\Shared\_Delete.cshtml" />
-    <Content Include="Views\Shared\_New.cshtml" />
+    <Content Include="Views\Shared\_Contato.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
