--- a/UI.MVC/UI.MVC.csproj
+++ b/UI.MVC/UI.MVC.csproj
@@ -160,6 +160,8 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\Shared\_Delete.cshtml" />
     <Content Include="Views\Shared\_Contato.cshtml" />
+    <Content Include="Views\Shared\_DadosTable.cshtml" />
+    <Content Include="Views\Shared\_MenuPaginacao.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
