--- a/UI.MVC/UI.MVC.csproj
+++ b/UI.MVC/UI.MVC.csproj
@@ -131,6 +131,7 @@
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <None Include="Properties\PublishProfiles\Localmente.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\codigos-pagina-index.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
@@ -162,6 +163,7 @@
     <Content Include="Views\Shared\_Contato.cshtml" />
     <Content Include="Views\Shared\_DadosTable.cshtml" />
     <Content Include="Views\Shared\_MenuPaginacao.cshtml" />
+    <Content Include="Views\Shared\_Aviso.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
